# doc-whisperer

./: .env.example  README.md  main.py  promptfooconfig.yaml  pyproject.toml  requirements.txt  run_tests.bash
config/: settings.py
core/: document_processor.py  embeddings_manager.py  vector_store.py
utils/: file_handlers.py  prompts.py
workflows/: rag_workflow.py
